--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "react-native-bare-ui",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -18,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "yarn": "^1.22.10"
   },
@@ -25,6 +27,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-vector-icons": "^6.4.6",
     "typescript": "~4.0.0"
   },
   "private": true
